[nuntium] Added Intercom ID

--- a/templates/nuntium/1/docker-compose.yml
+++ b/templates/nuntium/1/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       SCHEME: ${SCHEME}
       HOSTNAME: ${HOSTNAME}
       WEB_PUMA_FLAGS: ${WEB_PUMA_FLAGS}
+      {{- if .Values.INTERCOM_APP_ID }}
+      INTERCOM_APP_ID: ${INTERCOM_APP_ID}
+      {{- end }}
     {{- if .Values.WEB_MEM_LIMIT }}
     mem_limit: ${WEB_MEM_LIMIT}
     {{- end }}
