[resourcemap] Added Intercom app ID

--- a/templates/resourcemap/0/docker-compose.yml
+++ b/templates/resourcemap/0/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       SETTINGS__SMTP__PASSWORD: ${SMTP_PASS}
       SETTINGS__SMTP__PORT: ${SMTP_PORT}
       SETTINGS__SMTP__USER_NAME: ${SMTP_USER}
+      {{- if .Values.INTERCOM_APP_ID }}
+      INTERCOM_APP_ID: ${INTERCOM_APP_ID}
+      {{- end }}
 
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       SETTINGS__GOOGLE_MAPS_KEY: ${GOOGLE_MAPS_KEY}
