[guisso] Added option to use memcached as OpenID store

--- a/templates/guisso/0/docker-compose.yml
+++ b/templates/guisso/0/docker-compose.yml
@@ -37,3 +37,11 @@ services:
       {{- if .Values.INTERCOM_APP_ID }}
       INTERCOM_APP_ID: ${INTERCOM_APP_ID}
       {{- end }}
+      {{- if eq .Values.USE_MEMCACHED_FOR_OPENID_STORE "true" }}
+      OPENID_STORE: memcached://memcached
+      {{- end }}
+
+  {{- if eq .Values.USE_MEMCACHED_FOR_OPENID_STORE "true" }}
+  memcached:
+    image: memcached:1.5
+  {{- end }}
