--- a/templates/pollit/0/rancher-compose.yml
+++ b/templates/pollit/0/rancher-compose.yml
@@ -75,6 +75,11 @@
       required: true
       type: password
 
+    - variable: INTERCOM_APP_ID
+      label: Intercom App ID
+      type: string
+      required: false
+
     - variable: WEB_MEM_LIMIT
       label: Memory limit (web process)
       type: string
