[facility-public-portal] Fix label

--- a/templates/facility-public-portal/1/rancher-compose.yml
+++ b/templates/facility-public-portal/1/rancher-compose.yml
@@ -127,7 +127,7 @@
       label: Primary color override
       type: string
     - variable: TOPNAV_BACKGROUND_COLOR
-      labels: Navigation bar background color override
+      label: Navigation bar background color override
       type: string
 
     - variable: WEB_MEM_LIMIT
