[facility-public-portal] Fix invalid values for mem_limit and mem_reservation

--- a/templates/facility-public-portal/2/docker-compose.yml
+++ b/templates/facility-public-portal/2/docker-compose.yml
@@ -57,8 +57,7 @@ services:
       io.rancher.container.pull_image: always
       io.rancher.container.start_once: "true"
     command: rake db:migrate
-    mem_limit:
-    mem_reservation:
+    mem_reservation: 4m
 
   {{- if eq .Values.EXTERNAL_DATABASE "false" }}
   db:
