[facility-public-portal] Add option to set the default locale

--- a/templates/facility-public-portal/2/docker-compose.yml
+++ b/templates/facility-public-portal/2/docker-compose.yml
@@ -26,6 +26,10 @@ services:
 
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
 
+      {{- if .Values.DEFAULT_LOCALE }}
+      SETTINGS__DEFAULT_LOCALE: ${DEFAULT_LOCALE}
+      {{- end }}
+
       SETTINGS__ADMIN_USER: ${ADMIN_USER}
       SETTINGS__ADMIN_PASS: ${ADMIN_PASS}
 
