--- a/templates/facility-public-portal/2/rancher-compose.yml
+++ b/templates/facility-public-portal/2/rancher-compose.yml
@@ -55,6 +55,10 @@
       type: string
       default: 1
 
+    - variable: DEFAULT_LOCALE
+      label: Default locale
+      type: string
+
     - variable: SECRET_KEY_BASE
       label: Secret Key Base (used to sign/encrypt session tokens)
       type: password
