[logging] Add a label to the oauth2-proxy, so the load balance can point to this service by label (infrastructure services are not displayed in the UI)

--- a/infra-templates/logging/0/docker-compose.yml
+++ b/infra-templates/logging/0/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     - --github-team=${OAUTH2_PROXY_GITHUB_TEAM}
     labels:
       io.rancher.container.pull_image: always
+      logging-proxy: {{ .Stack.Name }}
 volumes:
   filebeat_data:
     per_container: true
