--- a/templates/resourcemap/0/docker-compose.yml
+++ b/templates/resourcemap/0/docker-compose.yml
@@ -65,6 +65,7 @@ services:
   db-migrate:
     <<: *app
     command: bundle exec rake db:migrate
+    mem_reservation: 4m
     labels:
       io.rancher.container.pull_image: always
       io.rancher.container.start_once: "true"
