[nuntium] Fix sidekick name

--- a/templates/nuntium/1/docker-compose.yml
+++ b/templates/nuntium/1/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     {{- end }}
     {{- if .Values.PROM_EXPORTERS }}
     labels:
-      io.rancher.sidekicks: asterisk-bridge
+      io.rancher.sidekicks: memcached-exporter
     {{- end }}
 
   {{- if .Values.PROM_EXPORTERS }}
