[surveda] Replace Google URL shortener with InSTEDD's

--- a/templates/surveda/0/docker-compose.yml
+++ b/templates/surveda/0/docker-compose.yml
@@ -35,7 +35,10 @@ services:
       DATABASE_USER: ${DATABASE_USER}
       EMAIL_FROM_EMAIL: ${EMAIL_FROM_EMAIL}
       EMAIL_FROM_NAME: ${EMAIL_FROM_NAME}
-      GOOGLE_URL_SHORTENER_API_KEY: ${GOOGLE_URL_SHORTENER_API_KEY}
+      URL_SHORTENER_API_KEY: ${URL_SHORTENER_API_KEY}
+      {{- if .Values.URL_SHORTENER_SERVICE }}
+      URL_SHORTENER_SERVICE: ${URL_SHORTENER_SERVICE}
+      {{- end }}
       {{- if .Values.MOBILE_WEB_BASE_URL }}
       MOBILE_WEB_BASE_URL: ${MOBILE_WEB_BASE_URL}
       {{- end }}
